2010-08-14  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Add autodetection of inpout32.

  * configure.ac: Disable ice100 cable driver when libusb is not found.

2010-08-11  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/cable/ice100.c: Add version check and firmware upgrade information
    for ICE-100B cables (Chad Wentworth).

2010-08-08  Arnim Laeuger  <arniml>

  * src/tap/cable/generic.c: fix TDO handling in generic_flush_using_transfer()
    (Matthias Drochner)

2010-08-07  Mike Frysinger  <vapier@gentoo.org>

  * src/global/params.c (parse_param_lu): Accept unsigned values in hex format.

2010-07-31  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/buses.c, src/flash/jedec.c, src/tap/cable.c: Convert to ARRAY_SIZE.

2010-07-30  Mike Frysinger  <vapier@gentoo.org>

  * data/analog/bf592/STEPPINGS: Add support for bf592-0.1.

  * src/tap/cable/jim.c: Fix by Michael Walle for build failure due to older
    cable struct setup.

2010-07-30  Arnim Laeuger  <arniml>

  * src/flash/intel.c: issue CFI_INTEL_CMD_WRITE_TO_BUFFER when polling
    SR_READY in buffered write (Michael Walle)

2010-07-30  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/cable.h (URJ_CABLE_PARAM_KEY): Add new cable params for tdi,
    tdo, tms, and tck for new GPIO cable driver.
  * src/tap/cable.c (cable_param): Likewise.
  * src/tap/cable_list.h: Add new GPIO cable driver entry.
  * configure.ac, src/tap/Makefile.am: Likewise.
  * src/tap/cable/gpio.c: New GPIO cable driver by Stefano Babic.

2010-07-18  Mike Frysinger  <vapier@gentoo.org>

  * src/apps/jtag/jtag.c (main): Do not abort running just because a user's
    rc file is unparseable (or inaccessible).

  * src/apps/jtag/jtag.c: Unify jtag home dir parsing and add support for
    the Windows home env var names.

  * src/apps/bsdl2jtag/bsdl2jtag.c, src/bsdl/bsdl.c, src/bsdl/vhdl_flex.l,
    src/cmd/cmd_readmem.c, src/cmd/cmd_svf.c, src/cmd/cmd_writemem.c,