@@ -1,3 +1,8 @@
+2010-08-16  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/tap/detect.c (urj_tap_detect_parts): Include paths to data files when
+    issuing "unknown" messages.
+
 2010-08-14  Mike Frysinger  <vapier@gentoo.org>
 
   * configure.ac: Add autodetection of inpout32.
